Etapa 2/y.output
   0  $accept : program $end

   1  program : item program
   2          |

   3  item : global_type_dec ';'
   4       | fun_def

   5  global_type_dec : type global_dec

   6  global_dec : TK_IDENTIFIER value_init
   7             | '$' TK_IDENTIFIER scalar_init

   8  value_init : scalar_init
   9             | '[' LIT_INTEGER ']' array_init

  10  scalar_init : ':' literal

  11  array_init : ':' literal_list
  12             |

  13  local_type_dec : type local_dec

  14  local_dec : TK_IDENTIFIER scalar_init
  15            | '$' TK_IDENTIFIER scalar_init

  16  type : KW_WORD
  17       | KW_BOOL
  18       | KW_BYTE

  19  literal : LIT_INTEGER
  20          | LIT_FALSE
  21          | LIT_TRUE
  22          | LIT_CHAR

  23  literal_list : literal literal_list
  24               |

  25  fun_def : header local_type_decs block

  26  local_type_decs : local_type_decs local_type_dec ';'
  27                  |

  28  header : type TK_IDENTIFIER '(' type_parameter_list ')'

  29  parameter : TK_IDENTIFIER
  30            | literal

  31  type_parameter_list : type TK_IDENTIFIER type_parameter_list_tail
  32                      |

  33  type_parameter_list_tail : ',' type TK_IDENTIFIER type_parameter_list_tail
  34                           |

  35  parameter_list : parameter parameter_list_tail
  36                 |

  37  parameter_list_tail : ',' parameter parameter_list_tail
  38                      |

  39  block : '{' command_list '}'

  40  command_list : command ';' command_list
  41               |

  42  command : atr
  43          | flow_control
  44          | input
  45          | output
  46          | return
  47          | block

  48  atr : TK_IDENTIFIER ass

  49  ass : '=' expr
  50      | '[' expr ']' '=' expr

  51  flow_control : if_then
  52               | if_then_else
  53               | KW_LOOP '(' expr ')' command

  54  if_then : KW_IF '(' expr ')' KW_THEN command

  55  if_then_else : KW_IF '(' expr ')' KW_THEN command KW_ELSE command

  56  input : KW_INPUT TK_IDENTIFIER

  57  output : KW_OUTPUT element_list

  58  element : LIT_STRING
  59          | expr

  60  element_list : element element_list_tail

  61  element_list_tail : ',' element_list
  62                    |

  63  return : KW_RETURN expr

  64  expr : TK_IDENTIFIER access
  65       | TK_IDENTIFIER '(' parameter_list ')'
  66       | literal
  67       | '(' expr ')'
  68       | expr op expr

  69  access : '[' expr ']'
  70         |

  71  op : '+'
  72     | '-'
  73     | '*'
  74     | '/'
  75     | '<'
  76     | '>'
  77     | OPERATOR_LE
  78     | OPERATOR_GE
  79     | OPERATOR_EQ
  80     | OPERATOR_NE
  81     | OPERATOR_AND
  82     | OPERATOR_OR

state 0
	$accept : . program $end  (0)
	program : .  (2)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 2

	program  goto 4
	item  goto 5
	global_type_dec  goto 6
	fun_def  goto 7
	type  goto 8
	header  goto 9


state 1
	type : KW_WORD .  (16)

	.  reduce 16


state 2
	type : KW_BOOL .  (17)

	.  reduce 17


state 3
	type : KW_BYTE .  (18)

	.  reduce 18


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	program : item . program  (1)
	program : .  (2)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	$end  reduce 2

	program  goto 10
	item  goto 5
	global_type_dec  goto 6
	fun_def  goto 7
	type  goto 8
	header  goto 9


state 6
	item : global_type_dec . ';'  (3)

	';'  shift 11
	.  error


state 7
	item : fun_def .  (4)

	.  reduce 4


state 8
	global_type_dec : type . global_dec  (5)
	header : type . TK_IDENTIFIER '(' type_parameter_list ')'  (28)

	TK_IDENTIFIER  shift 12
	'$'  shift 13
	.  error

	global_dec  goto 14


state 9
	fun_def : header . local_type_decs block  (25)
	local_type_decs : .  (27)

	.  reduce 27

	local_type_decs  goto 15


state 10
	program : item program .  (1)

	.  reduce 1


state 11
	item : global_type_dec ';' .  (3)

	.  reduce 3


state 12
	global_dec : TK_IDENTIFIER . value_init  (6)
	header : type TK_IDENTIFIER . '(' type_parameter_list ')'  (28)

	'['  shift 16
	':'  shift 17
	'('  shift 18
	.  error

	value_init  goto 19
	scalar_init  goto 20


state 13
	global_dec : '$' . TK_IDENTIFIER scalar_init  (7)

	TK_IDENTIFIER  shift 21
	.  error


state 14
	global_type_dec : type global_dec .  (5)

	.  reduce 5


state 15
	fun_def : header local_type_decs . block  (25)
	local_type_decs : local_type_decs . local_type_dec ';'  (26)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	'{'  shift 22
	.  error

	type  goto 23
	local_type_dec  goto 24
	block  goto 25


state 16
	value_init : '[' . LIT_INTEGER ']' array_init  (9)

	LIT_INTEGER  shift 26
	.  error


state 17
	scalar_init : ':' . literal  (10)

	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	.  error

	literal  goto 31


state 18
	header : type TK_IDENTIFIER '(' . type_parameter_list ')'  (28)
	type_parameter_list : .  (32)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	')'  reduce 32

	type  goto 32
	type_parameter_list  goto 33


state 19
	global_dec : TK_IDENTIFIER value_init .  (6)

	.  reduce 6


state 20
	value_init : scalar_init .  (8)

	.  reduce 8


state 21
	global_dec : '$' TK_IDENTIFIER . scalar_init  (7)

	':'  shift 17
	.  error

	scalar_init  goto 34


state 22
	block : '{' . command_list '}'  (39)
	command_list : .  (41)

	KW_IF  shift 35
	KW_LOOP  shift 36
	KW_INPUT  shift 37
	KW_RETURN  shift 38
	KW_OUTPUT  shift 39
	TK_IDENTIFIER  shift 40
	'{'  shift 22
	'}'  reduce 41

	block  goto 41
	command_list  goto 42
	command  goto 43
	atr  goto 44
	flow_control  goto 45
	input  goto 46
	output  goto 47
	return  goto 48
	if_then  goto 49
	if_then_else  goto 50


state 23
	local_type_dec : type . local_dec  (13)

	TK_IDENTIFIER  shift 51
	'$'  shift 52
	.  error

	local_dec  goto 53


state 24
	local_type_decs : local_type_decs local_type_dec . ';'  (26)

	';'  shift 54
	.  error


state 25
	fun_def : header local_type_decs block .  (25)

	.  reduce 25


state 26
	value_init : '[' LIT_INTEGER . ']' array_init  (9)

	']'  shift 55
	.  error


state 27
	literal : LIT_INTEGER .  (19)

	.  reduce 19


state 28
	literal : LIT_FALSE .  (20)

	.  reduce 20


state 29
	literal : LIT_TRUE .  (21)

	.  reduce 21


state 30
	literal : LIT_CHAR .  (22)

	.  reduce 22


state 31
	scalar_init : ':' literal .  (10)

	.  reduce 10


state 32
	type_parameter_list : type . TK_IDENTIFIER type_parameter_list_tail  (31)

	TK_IDENTIFIER  shift 56
	.  error


state 33
	header : type TK_IDENTIFIER '(' type_parameter_list . ')'  (28)

	')'  shift 57
	.  error


state 34
	global_dec : '$' TK_IDENTIFIER scalar_init .  (7)

	.  reduce 7


state 35
	if_then : KW_IF . '(' expr ')' KW_THEN command  (54)
	if_then_else : KW_IF . '(' expr ')' KW_THEN command KW_ELSE command  (55)

	'('  shift 58
	.  error


state 36
	flow_control : KW_LOOP . '(' expr ')' command  (53)

	'('  shift 59
	.  error


state 37
	input : KW_INPUT . TK_IDENTIFIER  (56)

	TK_IDENTIFIER  shift 60
	.  error


state 38
	return : KW_RETURN . expr  (63)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 64


state 39
	output : KW_OUTPUT . element_list  (57)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	LIT_STRING  shift 65
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 66
	element_list  goto 67
	element  goto 68


state 40
	atr : TK_IDENTIFIER . ass  (48)

	'['  shift 69
	'='  shift 70
	.  error

	ass  goto 71


state 41
	command : block .  (47)

	.  reduce 47


state 42
	block : '{' command_list . '}'  (39)

	'}'  shift 72
	.  error


state 43
	command_list : command . ';' command_list  (40)

	';'  shift 73
	.  error


state 44
	command : atr .  (42)

	.  reduce 42


state 45
	command : flow_control .  (43)

	.  reduce 43


state 46
	command : input .  (44)

	.  reduce 44


state 47
	command : output .  (45)

	.  reduce 45


state 48
	command : return .  (46)

	.  reduce 46


state 49
	flow_control : if_then .  (51)

	.  reduce 51


state 50
	flow_control : if_then_else .  (52)

	.  reduce 52


state 51
	local_dec : TK_IDENTIFIER . scalar_init  (14)

	':'  shift 17
	.  error

	scalar_init  goto 74


state 52
	local_dec : '$' . TK_IDENTIFIER scalar_init  (15)

	TK_IDENTIFIER  shift 75
	.  error


state 53
	local_type_dec : type local_dec .  (13)

	.  reduce 13


state 54
	local_type_decs : local_type_decs local_type_dec ';' .  (26)

	.  reduce 26


state 55
	value_init : '[' LIT_INTEGER ']' . array_init  (9)
	array_init : .  (12)

	':'  shift 76
	';'  reduce 12

	array_init  goto 77


state 56
	type_parameter_list : type TK_IDENTIFIER . type_parameter_list_tail  (31)
	type_parameter_list_tail : .  (34)

	','  shift 78
	')'  reduce 34

	type_parameter_list_tail  goto 79


state 57
	header : type TK_IDENTIFIER '(' type_parameter_list ')' .  (28)

	.  reduce 28


state 58
	if_then : KW_IF '(' . expr ')' KW_THEN command  (54)
	if_then_else : KW_IF '(' . expr ')' KW_THEN command KW_ELSE command  (55)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 80


state 59
	flow_control : KW_LOOP '(' . expr ')' command  (53)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 81


state 60
	input : KW_INPUT TK_IDENTIFIER .  (56)

	.  reduce 56


state 61
	expr : TK_IDENTIFIER . access  (64)
	expr : TK_IDENTIFIER . '(' parameter_list ')'  (65)
	access : .  (70)

	'['  shift 82
	'('  shift 83
	KW_ELSE  reduce 70
	OPERATOR_LE  reduce 70
	OPERATOR_GE  reduce 70
	OPERATOR_EQ  reduce 70
	OPERATOR_NE  reduce 70
	OPERATOR_AND  reduce 70
	OPERATOR_OR  reduce 70
	'<'  reduce 70
	'>'  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	'*'  reduce 70
	'/'  reduce 70
	';'  reduce 70
	']'  reduce 70
	')'  reduce 70
	','  reduce 70

	access  goto 84


state 62
	expr : '(' . expr ')'  (67)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 85


state 63
	expr : literal .  (66)

	.  reduce 66


state 64
	return : KW_RETURN expr .  (63)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	KW_ELSE  reduce 63
	';'  reduce 63

	op  goto 98


state 65
	element : LIT_STRING .  (58)

	.  reduce 58


state 66
	element : expr .  (59)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	KW_ELSE  reduce 59
	';'  reduce 59
	','  reduce 59

	op  goto 98


state 67
	output : KW_OUTPUT element_list .  (57)

	.  reduce 57


state 68
	element_list : element . element_list_tail  (60)
	element_list_tail : .  (62)

	','  shift 99
	KW_ELSE  reduce 62
	';'  reduce 62

	element_list_tail  goto 100


state 69
	ass : '[' . expr ']' '=' expr  (50)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 101


state 70
	ass : '=' . expr  (49)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 102


state 71
	atr : TK_IDENTIFIER ass .  (48)

	.  reduce 48


state 72
	block : '{' command_list '}' .  (39)

	.  reduce 39


state 73
	command_list : command ';' . command_list  (40)
	command_list : .  (41)

	KW_IF  shift 35
	KW_LOOP  shift 36
	KW_INPUT  shift 37
	KW_RETURN  shift 38
	KW_OUTPUT  shift 39
	TK_IDENTIFIER  shift 40
	'{'  shift 22
	'}'  reduce 41

	block  goto 41
	command_list  goto 103
	command  goto 43
	atr  goto 44
	flow_control  goto 45
	input  goto 46
	output  goto 47
	return  goto 48
	if_then  goto 49
	if_then_else  goto 50


state 74
	local_dec : TK_IDENTIFIER scalar_init .  (14)

	.  reduce 14


state 75
	local_dec : '$' TK_IDENTIFIER . scalar_init  (15)

	':'  shift 17
	.  error

	scalar_init  goto 104


state 76
	array_init : ':' . literal_list  (11)
	literal_list : .  (24)

	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	';'  reduce 24

	literal  goto 105
	literal_list  goto 106


state 77
	value_init : '[' LIT_INTEGER ']' array_init .  (9)

	.  reduce 9


state 78
	type_parameter_list_tail : ',' . type TK_IDENTIFIER type_parameter_list_tail  (33)

	KW_WORD  shift 1
	KW_BOOL  shift 2
	KW_BYTE  shift 3
	.  error

	type  goto 107


state 79
	type_parameter_list : type TK_IDENTIFIER type_parameter_list_tail .  (31)

	.  reduce 31


state 80
	if_then : KW_IF '(' expr . ')' KW_THEN command  (54)
	if_then_else : KW_IF '(' expr . ')' KW_THEN command KW_ELSE command  (55)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	')'  shift 108
	.  error

	op  goto 98


state 81
	flow_control : KW_LOOP '(' expr . ')' command  (53)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	')'  shift 109
	.  error

	op  goto 98


state 82
	access : '[' . expr ']'  (69)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 110


state 83
	expr : TK_IDENTIFIER '(' . parameter_list ')'  (65)
	parameter_list : .  (36)

	TK_IDENTIFIER  shift 111
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	')'  reduce 36

	literal  goto 112
	parameter  goto 113
	parameter_list  goto 114


state 84
	expr : TK_IDENTIFIER access .  (64)

	.  reduce 64


state 85
	expr : '(' expr . ')'  (67)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	')'  shift 115
	.  error

	op  goto 98


state 86
	op : OPERATOR_LE .  (77)

	.  reduce 77


state 87
	op : OPERATOR_GE .  (78)

	.  reduce 78


state 88
	op : OPERATOR_EQ .  (79)

	.  reduce 79


state 89
	op : OPERATOR_NE .  (80)

	.  reduce 80


state 90
	op : OPERATOR_AND .  (81)

	.  reduce 81


state 91
	op : OPERATOR_OR .  (82)

	.  reduce 82


state 92
	op : '<' .  (75)

	.  reduce 75


state 93
	op : '>' .  (76)

	.  reduce 76


state 94
	op : '+' .  (71)

	.  reduce 71


state 95
	op : '-' .  (72)

	.  reduce 72


state 96
	op : '*' .  (73)

	.  reduce 73


state 97
	op : '/' .  (74)

	.  reduce 74


state 98
	expr : expr op . expr  (68)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 116


state 99
	element_list_tail : ',' . element_list  (61)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	LIT_STRING  shift 65
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 66
	element_list  goto 117
	element  goto 68


state 100
	element_list : element element_list_tail .  (60)

	.  reduce 60


state 101
	ass : '[' expr . ']' '=' expr  (50)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	']'  shift 118
	.  error

	op  goto 98


state 102
	ass : '=' expr .  (49)
	expr : expr . op expr  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	KW_ELSE  reduce 49
	';'  reduce 49

	op  goto 98


state 103
	command_list : command ';' command_list .  (40)

	.  reduce 40


state 104
	local_dec : '$' TK_IDENTIFIER scalar_init .  (15)

	.  reduce 15


state 105
	literal_list : literal . literal_list  (23)
	literal_list : .  (24)

	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	';'  reduce 24

	literal  goto 105
	literal_list  goto 119


state 106
	array_init : ':' literal_list .  (11)

	.  reduce 11


state 107
	type_parameter_list_tail : ',' type . TK_IDENTIFIER type_parameter_list_tail  (33)

	TK_IDENTIFIER  shift 120
	.  error


state 108
	if_then : KW_IF '(' expr ')' . KW_THEN command  (54)
	if_then_else : KW_IF '(' expr ')' . KW_THEN command KW_ELSE command  (55)

	KW_THEN  shift 121
	.  error


state 109
	flow_control : KW_LOOP '(' expr ')' . command  (53)

	KW_IF  shift 35
	KW_LOOP  shift 36
	KW_INPUT  shift 37
	KW_RETURN  shift 38
	KW_OUTPUT  shift 39
	TK_IDENTIFIER  shift 40
	'{'  shift 22
	.  error

	block  goto 41
	command  goto 122
	atr  goto 44
	flow_control  goto 45
	input  goto 46
	output  goto 47
	return  goto 48
	if_then  goto 49
	if_then_else  goto 50


state 110
	expr : expr . op expr  (68)
	access : '[' expr . ']'  (69)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	']'  shift 123
	.  error

	op  goto 98


state 111
	parameter : TK_IDENTIFIER .  (29)

	.  reduce 29


state 112
	parameter : literal .  (30)

	.  reduce 30


state 113
	parameter_list : parameter . parameter_list_tail  (35)
	parameter_list_tail : .  (38)

	','  shift 124
	')'  reduce 38

	parameter_list_tail  goto 125


state 114
	expr : TK_IDENTIFIER '(' parameter_list . ')'  (65)

	')'  shift 126
	.  error


state 115
	expr : '(' expr ')' .  (67)

	.  reduce 67


116: shift/reduce conflict (shift 86, reduce 68) on OPERATOR_LE
116: shift/reduce conflict (shift 87, reduce 68) on OPERATOR_GE
116: shift/reduce conflict (shift 88, reduce 68) on OPERATOR_EQ
116: shift/reduce conflict (shift 89, reduce 68) on OPERATOR_NE
116: shift/reduce conflict (shift 90, reduce 68) on OPERATOR_AND
116: shift/reduce conflict (shift 91, reduce 68) on OPERATOR_OR
116: shift/reduce conflict (shift 92, reduce 68) on '<'
116: shift/reduce conflict (shift 93, reduce 68) on '>'
116: shift/reduce conflict (shift 94, reduce 68) on '+'
116: shift/reduce conflict (shift 95, reduce 68) on '-'
116: shift/reduce conflict (shift 96, reduce 68) on '*'
116: shift/reduce conflict (shift 97, reduce 68) on '/'
state 116
	expr : expr . op expr  (68)
	expr : expr op expr .  (68)

	OPERATOR_LE  shift 86
	OPERATOR_GE  shift 87
	OPERATOR_EQ  shift 88
	OPERATOR_NE  shift 89
	OPERATOR_AND  shift 90
	OPERATOR_OR  shift 91
	'<'  shift 92
	'>'  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	KW_ELSE  reduce 68
	';'  reduce 68
	']'  reduce 68
	')'  reduce 68
	','  reduce 68

	op  goto 98


state 117
	element_list_tail : ',' element_list .  (61)

	.  reduce 61


state 118
	ass : '[' expr ']' . '=' expr  (50)

	'='  shift 127
	.  error


state 119
	literal_list : literal literal_list .  (23)

	.  reduce 23


state 120
	type_parameter_list_tail : ',' type TK_IDENTIFIER . type_parameter_list_tail  (33)
	type_parameter_list_tail : .  (34)

	','  shift 78
	')'  reduce 34

	type_parameter_list_tail  goto 128


state 121
	if_then : KW_IF '(' expr ')' KW_THEN . command  (54)
	if_then_else : KW_IF '(' expr ')' KW_THEN . command KW_ELSE command  (55)

	KW_IF  shift 35
	KW_LOOP  shift 36
	KW_INPUT  shift 37
	KW_RETURN  shift 38
	KW_OUTPUT  shift 39
	TK_IDENTIFIER  shift 40
	'{'  shift 22
	.  error

	block  goto 41
	command  goto 129
	atr  goto 44
	flow_control  goto 45
	input  goto 46
	output  goto 47
	return  goto 48
	if_then  goto 49
	if_then_else  goto 50


state 122
	flow_control : KW_LOOP '(' expr ')' command .  (53)

	.  reduce 53


state 123
	access : '[' expr ']' .  (69)

	.  reduce 69


state 124
	parameter_list_tail : ',' . parameter parameter_list_tail  (37)

	TK_IDENTIFIER  shift 111
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	.  error

	literal  goto 112
	parameter  goto 130


state 125
	parameter_list : parameter parameter_list_tail .  (35)

	.  reduce 35


state 126
	expr : TK_IDENTIFIER '(' parameter_list ')' .  (65)

	.  reduce 65


state 127
	ass : '[' expr ']' '=' . expr  (50)

	TK_IDENTIFIER  shift 61
	LIT_INTEGER  shift 27
	LIT_FALSE  shift 28
	LIT_TRUE  shift 29
	LIT_CHAR  shift 30
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 131


state 128
	type_parameter_list_tail : ',' type TK_IDENTIFIER type_parameter_list_tail .  (33)

	.  reduce 33


129: shift/reduce conflict (shift 132, reduce 54) on KW_ELSE
state 129
	if_then : KW_IF '(' expr ')' KW_THEN command .  (54)
	if_then_else : KW_IF '(' expr ')' KW_THEN command . KW_ELSE command  (55)

	KW_ELSE  shift 132
	';'  reduce 54


state 130
	parameter_list_tail : ',' parameter . parameter_list_tail  (37)
	parameter_list_tail : .  (38)

	','  shift 124
	')'  reduce 38

	parameter_list_tail  goto 133


state 131
	ass : '[' expr ']' '=' expr .  (50)
	expr : expr . op expr  (68)
